--- a/views/content/content.ejs
+++ b/views/content/content.ejs
@@ -1,12 +1,21 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid py-4 px-5">
+<div class="container-fluid">
 	<header class="jumbotron py-3 px-5 mb-0">
 		<h1 class="display-4">Welcome to Toraberu!</h1>
         <p class="lead" style="font-weight: 400;">Toraberu is our hand-picked <em>unbelievable</em> places for you to visit</p>
-		<p><a class="btn btn-info btn-lg" href="/places/new">Add New Destination</a></p>
-	</header>
-	
+        <% if(currentUser) { %>
+            <p><a class="btn btn-info btn-lg" href="/places/new">Add New Destination</a></p>
+        <% } else { %>
+            <div class="mb-1">
+                <p><a class="btn btn-info btn-lg" data-toggle="modal" data-target="#IsLoggedIn">Add New Destination</a></p>
+            </div>
+            <!-- <%- include ("../partials/isloggedin") %> -->
+        <% }; %>
+    </header>
+    <% if(!currentUser) { %>
+        <%- include ("../partials/isloggedin") %>
+    <% }; %>
 	<div class="row text-center card-deck">
         <% content.forEach(function(content){ %>
         <div class="col-md-3 col-sm-6 mt-4">
@@ -37,6 +46,7 @@
         </div>
         <% }); %>
     </div>
-</div>	
+</div>
+<br>
 
 <%- include ("../partials/footer") %>
