--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,10 @@
           </div>
           <button class="btn btn-lg btn-outline-info btn-block">Login!</button>
         </form>
-        <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
+        <div class="d-flex justify-content-between pt-1">
+          <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
+          <a class="text-right" href="/register">Don't have account? Register! <i class="fas fa-angle-double-right"></i></a>
+        </div>
       </div>
     </div>
   </body>
