--- a/views/content/show.ejs
+++ b/views/content/show.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid pt-4 px-5">
+<div class="container-fluid">
     <!-- <a class="btn btn-info" href="/places">Go Back</a> -->
     <div class="show-head d-flex justify-content-between align-items-center rounded">
         <div class="d-flex align-items-center" style="align-items: baseline !important;">
@@ -52,7 +52,7 @@
                     <% if (content.rating === 0) { %>
                         <h5><em>No reviews yet.</em></h5>
                     <% } else { %>
-                        <% content.reviews.slice(0, 5).forEach(function(review){ %>
+                        <% content.reviews.slice(0, 4).forEach(function(review){ %>
                         <div class="row">
                             <div class="col-md-3">
                                 <%- '<span class="fa fa-star checked"></span>'.repeat(review.rating) %><%- '<span class="far fa-star checked"></span>'.repeat(5 - review.rating) %>
@@ -70,18 +70,31 @@
                                 <% } %>
                             </div>
                         </div>
+                        <hr class="mb-1">
                     <% }); %>
                     <% }; %>
-                    <div class="mb-1">
-                        <hr class="mb-1">
-                        <a class="btn btn-info btn-sm <% if (currentUser && content.reviews.some(function (review) {return review.author.id.equals(currentUser._id)})) { %> disabled <% } %>" href="/places/<%= content._id %>/reviews/new">
-                            Write a New Review</a>
-                        <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
-                    </div>
+                    <!-- REVIEWS MODALS - CREATE NEW REVIEW - YOU HAVE TO BE LOGEDIN-->
+                    <% if(currentUser) { %>
+                        <div class="mb-1">
+                            <% if (currentUser && content.reviews.some(function (review) {return review.author.id.equals(currentUser._id)})) { %> 
+                                <a data-toggle="modal" data-target="#ModalReviewsAdded" class="btn btn-info btn-sm">Write a New Review</a>
+                                <%- include ("../reviews/added") %>
+                            <% } else { %>
+                                <a data-toggle="modal" data-target="#ModalReviews" class="btn btn-info btn-sm">Write a New Review</a>
+                                <%- include ("../reviews/new") %>
+                            <% }; %>
+                            <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
+                        </div>
+                    <% } else { %>
+                        <div class="mb-1">
+                            <a data-toggle="modal" data-target="#IsLoggedIn" class="btn btn-info btn-sm" href="#">Write a New Review</a>
+                            <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
+                        </div>
+                    <% }; %>
                 </div>
                 <!-- THIRD NAV - COMMENTS -->
                 <div id="comments" class="container tab-pane fade"><br>
-                    <% content.comments.forEach(function(comment){ %>
+                    <% content.comments.slice(0, 4).forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-3">
                             <div>Comment by: <strong><%= comment.author.username %></strong></div>
@@ -97,35 +110,20 @@
                             <% }; %>
                         </div>
                     </div>
-                    <% }) %>
-                    <!-- COMMENTS MODALS - NEW COMMENT -->
-                    <div class="mb-1">
-                        <hr class="mb-1">
-                        <button class="btn btn-info btn-sm" data-toggle="modal" data-target="#ModalComments">Add new comment</button>
-                        <p class="delete-form"><a href="/places/<%= content._id %>/comments"><i class="fas fa-search" aria-hidden="true"></i> See all comments</a></p>
-                    </div>
-                    <div class="modal fade" id="ModalComments" tabindex="-1" role="dialog">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Create a New Comment</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                              </div>
-                              <div class="modal-body">
-                                <form action="/places/<%= content._id %>/comments/" method="POST">
-                                    <div class="form-group">
-                                      <textarea class="form-control" type="text" name="comment[text]" placeholder="Comment" rows="6"></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <button class="btn btn-lg btn-info btn-block">Submit new Comment</button>
-                                    </div>
-                                </form>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
+                    <hr class="mb-1">
+                    <% }); %>
+                    <!-- COMMENTS MODALS - CREATE NEW COMMENT - YOU HAVE TO BE LOGEDIN-->
+                    <% if(currentUser) { %>
+                        <div class="mb-1">
+                            <a class="btn btn-info btn-sm" data-toggle="modal" data-target="#ModalComments" href="#">Write a New Comment</a>
+                            <p class="delete-form"><a href="/places/<%= content._id %>/comments"><i class="fas fa-search" aria-hidden="true"></i> See all comments</a></p>
+                        </div>
+                    <% } else { %>
+                        <div class="mb-1">
+                            <a data-toggle="modal" data-target="#IsLoggedIn" class="btn btn-info btn-sm" href="#">Write a New Comment</a>
+                            <p class="delete-form"><a href="/places/<%= content._id %>/comments"><i class="fas fa-search" aria-hidden="true"></i> See all comments</a></p>
+                        </div>
+                    <% }; %>
                 </div>
             </div>
         </div>
@@ -157,4 +155,11 @@
     </div>
     <br>
 </div>
+
+<% if(currentUser) { %>
+    <%- include ("../comments/new") %>
+<% } else { %>
+    <%- include ("../partials/isloggedin") %>
+<% }; %>
+
 <%- include ("../partials/footer") %>
