--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,64 @@
-			<footer class="site-footer">
-
+			<footer class="footer">
+				<div class="row container-fluid m-0 p-4">
+					<div class="col-lg-4">
+							<h4 class="text-center text-secondary font-weight-light">Contact me</h4>
+							<hr class="my-2">
+							<p class="pb-1 m-0 pl-3">
+								<a class="footer-a" href="#"><i class="fab fa-google-plus-square fa-lg"></i> monika.intaite@gmail.com</a>
+							</p>
+							<p class="pb-1 m-0 pl-3">
+								<a class="footer-a" href="#"><i class="fab fa-linkedin fa-lg"></i> linkedin.com/in/monint</a>
+							</p>
+							<p class="pb-1 m-0 pl-3">
+								<a class="footer-a" href="#"><i class="fab fa-github-square fa-lg"></i> github.com/monint578</a>
+							</p>
+							<p class="pb-1 m-0 pl-3">
+								<a class="footer-a" href="#"><i class="fas fa-file-pdf fa-lg"></i> Download CV</a>
+							</p>
+					</div>
+					<div class="col-lg-4">
+						<h4 class="text-center text-secondary font-weight-light">About Toraberu project</h4>
+						<hr class="my-2">
+						<p class="text-secondary pb-1 m-0 px-3 text-justify">This Toraberu project was made by remaking YelpCamp project from Udemy course. You can look how it was changed here: <a class="footer-a" href="#"><em>www.yelpcamp.heroku.com</em></a>. I have finished Udemy course: The Web Developer Bootcamp.</p>
+					</div>
+					<div class="col-lg-4">
+							<h4 class="text-center text-secondary font-weight-light">Technologies used</h4>
+							<hr class="my-2">
+							<div class="row text-center">
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-html5 fa-2x"></i></a>
+								</div>
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-node fa-3x" ></i></a>
+								</div>
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-bootstrap fa-2x"></i></a>
+								</div>
+							</div>
+							<div class="row text-center pb-1">
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-css3-alt fa-2x"></i></a>
+								</div>
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><img class="img-fluid footer-mongo" style="height: 25px;" src="/img/express-seeklogo.com.svg"></a>
+								</div>
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-docker fa-2x"></i></a>
+								</div>
+							</div>
+							<div class="row text-center">
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-js-square fa-2x"></i></a>
+								</div>
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><img class="img-fluid footer-mongo" style="height: 30px;" src="/img/mongodb-logo.png"></a>
+								</div>
+								<div class="col-sm-4">
+									<a class="footer-a" href="#"><i class="fab fa-git-square fa-2x"></i></a>
+								</div>
+							</div>
+					</div>
+				</div>
 			</footer>
 			
 			<script src="https://kit.fontawesome.com/3d60d52d76.js" crossorigin="anonymous"></script>
