--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,13 +3,13 @@
 					<div class="col-lg-4">
 							<h4 class="text-center text-secondary font-weight-light">Contact me</h4>
 							<hr class="my-2">
-							<p class="pb-1 m-0 pl-3">
+							<p class="pb-2 m-0 pl-3">
 								<a class="footer-a" href="#"><i class="fab fa-google-plus-square fa-lg"></i> monika.intaite@gmail.com</a>
 							</p>
-							<p class="pb-1 m-0 pl-3">
+							<p class="pb-2 m-0 pl-3">
 								<a class="footer-a" href="#"><i class="fab fa-linkedin fa-lg"></i> linkedin.com/in/monint</a>
 							</p>
-							<p class="pb-1 m-0 pl-3">
+							<p class="pb-2 m-0 pl-3">
 								<a class="footer-a" href="#"><i class="fab fa-github-square fa-lg"></i> github.com/monint578</a>
 							</p>
 							<p class="pb-1 m-0 pl-3">
@@ -35,18 +35,18 @@
 									<a class="footer-a" href="#"><i class="fab fa-bootstrap fa-2x"></i></a>
 								</div>
 							</div>
-							<div class="row text-center pb-1">
+							<div class="row text-center">
 								<div class="col-sm-4">
 									<a class="footer-a" href="#"><i class="fab fa-css3-alt fa-2x"></i></a>
 								</div>
 								<div class="col-sm-4">
-									<a class="footer-a" href="#"><img class="img-fluid footer-mongo" style="height: 25px;" src="/img/express-seeklogo.com.svg"></a>
+									<a class="footer-a" href="#"><img class="img-fluid footer-mongo" style="height: 30px;" src="/img/express-seeklogo.com.svg"></a>
 								</div>
 								<div class="col-sm-4">
 									<a class="footer-a" href="#"><i class="fab fa-docker fa-2x"></i></a>
 								</div>
 							</div>
-							<div class="row text-center">
+							<div class="row text-center pt-3">
 								<div class="col-sm-4">
 									<a class="footer-a" href="#"><i class="fab fa-js-square fa-2x"></i></a>
 								</div>
