Cheking password validation (#5)

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/stylesheets/main.css">
 		<link  rel="stylesheet" href="/stylesheets/hover.css">
-		<link rel = "icon" href = "/img/1.png" type = "image/x-icon"> 
+		<link rel = "icon" href = "/img/1.png" type = "image/x-icon">
 		<title>Toraberu</title>
   </head>
   <body class="row align-items-center">
@@ -26,12 +26,12 @@
             <input class="form-control" type="email" name="username" placeholder="not.fake@gmail.com" required>
           </div>
           <div class="form-group">
-            <input class="form-control" aria-describedby="passwordHelpBlock" type="password" name="password" placeholder="password123" required>
-            <small id="passwordHelpBlock" class="form-text text-muted">Must be 8-20 character long and don't forget numbers. "pasword123 not suitable"</small>
+            <input class="form-control" aria-describedby="passwordHelpBlock" type="password" name="password" id="password" placeholder="password123" required pattern="(?=.*\d)(?=.*[a-z]).{7,}">
+            <small id="passwordHelpBlock" class="form-text  text-muted">Must be more than 7 character long and have numbers in it. "pasword123" is definately not suitable</small>
           </div>
-          <!-- <div class="form-group">
-            <input class="form-control" type="password" name="passwordConfirm" placeholder="password123 (one more time)" required>
-          </div> -->
+          <div class="form-group">
+            <input class="form-control" type="password" name="password2" id="confirm_password" placeholder="password123 (one more time)" required>
+          </div>
           <button class="btn btn-lg btn-outline-info btn-block">Sign Up!</button>
         </form>
         <div class="d-flex justify-content-between pt-1">
@@ -45,3 +45,17 @@
 			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <script>
+        var password = document.getElementById("password")
+          , confirm_password = document.getElementById("confirm_password");
+
+        function validatePassword(){
+          if(password.value != confirm_password.value) {
+            confirm_password.setCustomValidity("Passwords Don't Match");
+          } else {
+            confirm_password.setCustomValidity('');
+          }
+        }
+        password.onchange = validatePassword;
+        confirm_password.onkeyup = validatePassword;
+      </script>
