Fixed form validation and added CV links (#6)

--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,8 +1,8 @@
 <%- include ("../partials/header") %>
 
 <div class="container mw-50 py-4 px-5">
-	<h1 class="text-center">Edit <%= content.name %> comment</h1>
-	<div>
+	<h1 class="text-center">Edit Comment</h1>
+	<div class="px-5">
 		<form action="/places/<%= content_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
 			<div class="form-group">
 				<textarea class="form-control" type="text" name="comment[text]" rows="6"><%= comment.text %></textarea>
