--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,16 +4,16 @@
 							<h4 class="text-center text-secondary font-weight-light">Contact me</h4>
 							<hr class="my-2">
 							<p class="pb-2 m-0 pl-3">
-								<a class="footer-a" href="#"><i class="fab fa-google-plus-square fa-lg"></i> monika.intaite@gmail.com</a>
+								<a class="footer-a" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=monika.intaite@gmail.com" target="_blank"><i class="fab fa-google-plus-square fa-lg"></i> monika.intaite@gmail.com</a>
 							</p>
 							<p class="pb-2 m-0 pl-3">
-								<a class="footer-a" href="#"><i class="fab fa-linkedin fa-lg"></i> linkedin.com/in/monint</a>
+								<a class="footer-a" href="https://www.linkedin.com/in/monint/" target="_blank"><i class="fab fa-linkedin fa-lg"></i> linkedin.com/in/monint</a>
 							</p>
 							<p class="pb-2 m-0 pl-3">
-								<a class="footer-a" href="#"><i class="fab fa-github-square fa-lg"></i> github.com/monint578</a>
+								<a class="footer-a" href="https://github.com/monint578" target="_blank"><i class="fab fa-github-square fa-lg"></i> github.com/monint578</a>
 							</p>
 							<p class="pb-1 m-0 pl-3">
-								<a class="footer-a" href="#"><i class="fas fa-file-pdf fa-lg"></i> Download CV</a>
+								<a class="footer-a" href="/img/monika_intaite_eng.pdf" target="_blank"><i class="fas fa-file-pdf fa-lg" target="_blank"></i> Download CV</a>
 							</p>
 					</div>
 					<div class="col-lg-4">
