--- a/views/content/edit.ejs
+++ b/views/content/edit.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid pt-4 px-5">
+<div class="container-fluid">
 		<h1 class="text-center">Edit "<%= content.name %>" place</h1>
 		<div class="maid-container">
 			<form action="/places/<%= content._id %>?_method=PUT" method="POST">
@@ -10,9 +10,11 @@
 				<div class="form-group">
 					<input class="form-control" type="text" name="content[location]" value="<%= content.location %>">
 				</div>
+				<% content.images.forEach(function(image, index){ %>
 				<div class="form-group">
-					<input class="form-control" type="text" name="images[]" value="<%= content.image %>">
+					<input class="form-control" type="text" name="content[images][]" value="<%= content.images[index] %>">
 				</div>
+				<% }); %>
 				<div class="form-group">
 					<textarea class="form-control" type="text" name="content[description]" rows="6"><%= content.description %></textarea>
 				</div>
