--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,9 +1,8 @@
 <%- include ("../partials/header") %>
 
-<div class="container">
-    <div class="row">
-        <h1 style="text-align: center">Change Review</h1>
-        <div style="width: 30%; margin: 25px auto;">
+<div class="container-fluid">
+        <h1 class="text-center">Edit Review</h1>
+        <div class="maid-container">
             <form action="/places/<%= content_id %>/reviews/<%= review._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <label for="rating">Leave a rating:</label>
@@ -45,7 +44,7 @@
                     <textarea class="form-control" type="text" name="review[text]" placeholder="Write a review for this review..." rows="5"><%= review.text %></textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block">Submit a Review</button>
+                    <button class="btn btn-outline-info btn-block">Submit a Review</button>
                 </div>
             </form>
             <a href="/places/<%= content_id %>"><i class="fas fa-angle-double-left"></i> Go Back</a>
