--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -46,7 +46,7 @@
                     </fieldset>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" type="text" name="review[text]" placeholder="Write a review for this content..." rows="5"></textarea>
+                    <textarea class="form-control" type="text" name="review[text]" placeholder="Write a review for this content..." rows="5" required></textarea>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-info btn-block">Submit a Review</button>
