Added sticky footer

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,9 @@
 body {
   font-family: 'Raleway', sans-serif;
 }
+.heightvh {
+  height: 100vh;
+}
 /*SCROLL BAR*/
 ::-webkit-scrollbar {
   display: none;
