--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid py-4 px-5">
+<div class="container-fluid heightvh">
     <header class="jumbotron py-3 px-5 mb-0">
 		<h1 class="display-5">"<%= content.name %>" comments page</h1>
         <p class="lead"></p>
