--- a/views/content/content.ejs
+++ b/views/content/content.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid px-4">
+<div class="container-fluid px-4 heightvh">
 	<header class="jumbotron m-0 p-4">
 		<h1 class="display-4">Welcome to Toraberu!</h1>
         <p class="lead font-weight-normal">Toraberu is our hand-picked <em>unbelievable</em> places for you to visit</p>
