--- a/views/content/edit.ejs
+++ b/views/content/edit.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid pt-4 px-5">
+<div class="container-fluid heightvh">
 		<h1 class="text-center">Edit "<%= content.name %>" place</h1>
 		<div class="maid-container">
 			<form action="/places/<%= content._id %>?_method=PUT" method="POST">
