--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container mw-50 py-4 px-5">
+<div class="container-fluid heightvh">
 	<h1 class="text-center">Edit <%= content.name %> comment</h1>
 	<div>
 		<form action="/places/<%= content_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
