--- a/views/content/new.ejs
+++ b/views/content/new.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid pt-4 px-5">
+<div class="container-fluid heightvh">
   <h1 class="text-center">Create a New Place</h1>
   <div class="maid-container">
     <form action="/places" method="POST">
