--- a/views/content/show.ejs
+++ b/views/content/show.ejs
@@ -1,6 +1,6 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid">
+<div class="container-fluid heightvh">
     <!-- <a class="btn btn-info" href="/places">Go Back</a> -->
     <div class="show-head d-flex justify-content-between align-items-center rounded">
         <div class="d-flex align-items-center" style="align-items: baseline !important;">
