--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
 				  </ul>
 			   </div>
 			</nav>
-	<div class="container-fluid pt-4 px-5">
+	<div class="container pt-4 px-5">
 		<% if(error && error.length > 0) {%>
 			<div class="alert alert-danger" role="alert">
 				<%= error %>	
